--- a/style.css
+++ b/style.css
@@ -61,12 +61,13 @@ body{
 .heading-primary-sub{
     display: block;
     font-size: 20px;
-    letter-spacing: 17.4px;
+    letter-spacing: 16.5px;
     font-weight: 700;
     animation-name: moveInRight;
     animation-duration: 1s;
     animation-timing-function: 1s;
 }
+
 
 @keyframes moveInLeft{
     0%{
@@ -84,6 +85,7 @@ body{
     }
 }
 
+
 @keyframes moveInRight{
     0%{
         opacity: 0;
@@ -100,6 +102,20 @@ body{
     }
 }
 
+
+@keyframes moveInBottom{
+    0%{
+        opacity: 0;
+        transform: translateY(80%);
+    }
+
+    100%{
+        opacity: 1;
+        transform: translateX(0);
+    }
+}
+
+
 .btn:link,
 .btn:visited{
     text-transform: uppercase;
@@ -109,19 +125,58 @@ body{
     border-radius: 200px;
     transition: all 0.2s;
     box-shadow: 0 10px 20px rgba(0, 0,0, 0.2);
+    position: relative;
 }
+
 
 .btn:hover{
     transform: translateY(-3px);
     box-shadow: 0 5px 10px rgba(0, 0,0, 0.2);
 }
 
+
 .btn:active{
     transform: translateY(1px);
 }
+
 
 .btn-white{
     background-color: #fff;
     color: #777;
     margin-top: 25px;
 }
+
+
+.btn::after{
+    content: "";
+    display: inline-block;
+    height: 100%;
+    width: 100%;
+    border-radius: 100px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -1;
+    transition: all 0.4s;
+}
+
+
+.btn-white::after{
+    background-color:#fff;
+}
+
+
+.btn:hover::after{
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+
+
+.btn-animated{
+    animation-name: moveInBottom;
+    animation-duration: 1s;
+    animation-timing-function: ease-out;
+    animation-delay: 0.75s;
+    animation-fill-mode: backwards;
+}
+
