--- a/sass/styles.css
+++ b/sass/styles.css
@@ -1,4 +1,3 @@
-
 * {
   padding: 0;
   margin: 0;
@@ -171,8 +170,7 @@ body {
   }
 }
 
-.btn:link,
-.btn:visited {
+.btn:link, .btn:visited {
   text-transform: uppercase;
   text-decoration: none;
   padding: 15px 40px;
@@ -203,6 +201,10 @@ body {
   margin-top: 25px;
 }
 
+.btn-white::after {
+  background-color: #fff;
+}
+
 .btn::after {
   content: "";
   display: inline-block;
@@ -215,10 +217,6 @@ body {
   z-index: -1;
   -webkit-transition: all 0.4s;
   transition: all 0.4s;
-}
-
-.btn-white::after {
-  background-color: #fff;
 }
 
 .btn:hover::after {
