--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,13 +1,14 @@
-$color-primary:#55c57a
-$color-primary-light:#7ed56f
-$color-primary-dark:#28b485
-$color-white:#fff
-$color-gey:#777
-$color-black:#000000
+$color-primary:#55c57a;
+$color-primary-light:#7ed56f;
+$color-primary-dark:#28b485;
+$color-white:#fff;
+$color-gey:#777;
+$color-black:#000000;
+
 * {
     padding: 0;
     margin: 0;
-    box-sizing: border-box; }
+    box-sizing:border-box; }
   
   body {
     font-family: 'Lato', sans-serif;
@@ -24,48 +25,52 @@ $color-black:#000000
     clip-path: polygon(0 0, 100% 0%, 100% 75vh, 0% 100%);
     position: relative; 
 
-        &logo-box {
-            position: absolute;
-            top: 40px;
-            left: 40px; }
-
-        &logo {
-        height: 35px; }
-    
-        &text-box {
-            position: absolute;
-            top: 40%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            text-align: center; }
-
-
-        &heading-primary {
-            color: $color-white;
-            text-transform: uppercase;
-            backface-visibility: hidden; 
-        
-            &heading-primary-main {
-                display: block;
-                font-size: 60px;
-                letter-spacing: 35px;
-                font-weight: 400;
-                animation-name: moveInLeft;
-                animation-duration: 1s;
-                animation-timing-function: ease-out; }
-            
-            &heading-primary-sub {
-                display: block;
-                font-size: 20px;
-                letter-spacing: 16.5px;
-                font-weight: 700;
-                animation-name: moveInRight;
-                animation-duration: 1s;
-                animation-timing-function: 1s; }
-            
-        }
+       
        
 }
+
+
+.logo-box {
+  position: absolute;
+  top: 40px;
+  left: 40px; }
+
+.logo {
+height: 35px; }
+
+.text-box {
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center; }
+
+
+.heading-primary {
+  color: $color-white;
+  text-transform: uppercase;
+  backface-visibility: hidden; 
+  
+}
+
+
+.heading-primary-main {
+  display: block;
+  font-size: 60px;
+  letter-spacing: 35px;
+  font-weight: 400;
+  animation-name: moveInLeft;
+  animation-duration: 1s;
+  animation-timing-function: ease-out; }
+
+.heading-primary-sub {
+  display: block;
+  font-size: 20px;
+  letter-spacing: 16.5px;
+  font-weight: 700;
+  animation-name: moveInRight;
+  animation-duration: 1s;
+  animation-timing-function: 1s; }
   
   //Animation part start
 
